Dashboard fix overflow

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -9,7 +9,12 @@ body {
 }
 
 .container-fluid {
-  height: calc(100% - 90px) ;
+  height: calc(100% - 85px);
+  overflow-y: hidden;
+
+  .row {
+    margin-bottom: 0;
+  }
 
   .requests, .card {
     height: 100%;
@@ -17,6 +22,41 @@ body {
 
   .card-content {
     padding-top: 10px;
+  }
+}
+
+.requests-column {
+  height: 98%;
+  .card {
+    height: 100%;
+    .dashboard-sidebar-items-container {
+      height: 100%;
+      .badge {
+        margin-top: 10px;
+        float: left;
+      }
+      .dashboard-sidebar-items {
+        width: 100% !important;
+        height: calc(100% - 50px);
+        margin: 0;
+        overflow:hidden;
+        overflow-y:scroll;
+      }
+    }
+  }
+}
+
+.notifications-column {
+  height: 98%;
+  .card {
+    height: 100%;
+    .card-content {
+      height: 100%;
+    }
+  }
+  .dashboard-notification-list {
+    height: calc(100% - 32px);
+    overflow-y: scroll;
   }
 }
 
@@ -65,8 +105,10 @@ body {
 
 }
 
-.dashboard-request-view-button {
-  float: right;
+.dashboard-sidebar-header-view-button-wrapper {
+  .dashboard-request-view-button {
+    float: right;
+  }
 }
 
 .dashboard-sidebar-container {
@@ -83,21 +125,6 @@ body {
   line-height: 20px;
   margin-top: 0;
   color: #d5d5d5;
-}
-
-.dashboard-sidebar-items-container {
-  width: 100% !important;
-
-  .badge {
-    margin-top: 10px;
-    float: left;
-  }
-}
-
-.dashboard-sidebar-items {
-  margin: 0;
-  overflow:hidden;
-  overflow-y:scroll;
 }
 
 .dashboard-side-bar-item-link-wrapper {
